most recent render

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -512,7 +512,7 @@ years (Figure~\ref{fig-es-landings}, Table~\ref{tbl-es-catches}).
 Yelloweye Rockfish was declared overfished in \(2002\) and remains under
 a rebuilding plan that substantially limits catch. However, as other
 rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under
-it's rebuilding plan, catches have slowly increased in recent years,
+its rebuilding plan, catches have slowly increased in recent years,
 primarily in the Oregon-Washington non-trawl fleet and the recreational
 fleets.
 
@@ -590,19 +590,20 @@ The Yelloweye Rockfish assessment uses estimates of fecundity
 (eggs-at-length) from the Dick et al. (2017) method, and spawning output
 is reported in millions of eggs. The unexploited level of spawning stock
 output is estimated to be 1187.12 million eggs (95\% confidence
-interval: 999.2-1267.2 million eggs) (Figure~\ref{fig-es-so}). At the
+interval: 1,045.7-1,328.5 million eggs) (Figure~\ref{fig-es-so}). At the
 beginning of 2025, the spawning stock output is estimated to be 473.382
-million eggs (95\% confidence interval: 339.1--514.7 million eggs),
-which represents 39.9\% of the unfished spawning output level.
+million eggs (95\% confidence interval: 381--566 million eggs), which
+represents 39.9\% of the unfished spawning output level.
 
 Estimated relative spawning output was below the minimum stock size
 threshold in the late 1990s and was lowest in the early 2000s before
 increasing over the last 20 years. The 2024 estimated relative spawning
-output follows an increasing trajectory and is just below the management
-target threshold (Figure~\ref{fig-es-sb}). Yelloweye Rockfish is modeled
-in two areas (California and Oregon-Washington) in this assessment.
-Current population status does differ by area and may be valuable
-information for making management and allocation decisions
+output follows an increasing trajectory and is slightly below the
+management target threshold (Figure~\ref{fig-es-so},
+Figure~\ref{fig-es-sb}). Yelloweye Rockfish is modeled in two areas
+(California and Oregon-Washington) in this assessment. Current
+population status does differ by area and may be valuable information
+for making management and allocation decisions
 (Figure~\ref{fig-status-area-es}).
 
 \begingroup
@@ -754,13 +755,13 @@ intervals.}
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 39.9\% of its unexploited
-level. This is above the overfished threshold of SB25\%, but below the
-management target of SB40\% of unfished spawning biomass. Fishing
-intensity increased throughout the 1900s as the stock was fished down,
-until stablizing at peak intensity between the mid1980s and late 1990s
-and substantially decreasing in the late 1990s and early 2000s. Fishing
-intensity has since been relatively stable (Figure~\ref{fig-es-kobe},
-Table~\ref{tbl-es-spr}).
+level. This is above the overfished threshold of SB25\%, and slightly
+below the management target of SB40\% of unfished spawning biomass.
+Fishing intensity increased throughout the 1900s as the stock was fished
+down, until stabilizing at peak intensity between the mid1980s and late
+1990s and substantially decreasing in the late 1990s and early 2000s.
+Fishing intensity has since been relatively stable
+(Figure~\ref{fig-es-kobe}, Table~\ref{tbl-es-spr}).
 
 \begin{figure}[H]
 
@@ -824,12 +825,12 @@ reference points based on 1) a target unfished spawning output of 40\%,
 maximum sustainable yield, are all listed in
 Table~\ref{tbl-ref-points-es-1}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1187.12 million eggs (95\%
-confidence interval: 999.2-1267.2 million eggs). The management target
-for Yelloweye Rockfish is defined as 40\% of the unfished spawning
-output (SB40\%), which is estimated by the model to be 452 million eggs
-(95\% confidence interval: 397-507), which corresponds to an
-exploitation rate of 0.025. This harvest rate provides an equilibrium
-yield of 115 mt at SB40\% (95\% confidence interval: 101-130 mt). The
+confidence interval: 1,045.7-1,328.5 million eggs). The management
+target for Yelloweye Rockfish is defined as 40\% of the unfished
+spawning output (SB40\%), which is estimated by the model to be 475
+million eggs (95\% confidence interval: 418-531), which corresponds to
+an exploitation rate of 0.026. This harvest rate provides an equilibrium
+yield of 121 mt at SB40\% (95\% confidence interval: 107-136 mt). The
 equilibrium yield curve is shown in Figure~\ref{fig-eq-yield-es}.
 
 \clearpage
@@ -1028,12 +1029,13 @@ Mgmt & Year & Catch & Low Spawn & Low Frac & Base Spawn & Base Frac & High Spawn
 \addcontentsline{toc}{subsection}{Scientific uncertainty}
 
 The model estimated uncertainty around the 2025 spawning biomass for the
-model is 𝜎 = 0.026. The uncertainty around the \gls{ofl} in 2025 is 𝜎 =
-11.401. Each of these are likely underestimates of overall uncertainty
-due to the necessity to fix several key population dynamics parameters
-(e.g., steepness, recruitment variance) and also because there is no
-explicit incorporation of model structural uncertainty (although see the
-decision table for alternative states of nature).
+model is \emph{sigma} = 0.026. The uncertainty around the \gls{ofl} in
+2025 is \emph{sigma} = 11.401. Each of these are likely underestimates
+of overall uncertainty due to the necessity to fix several key
+population dynamics parameters (e.g., steepness, recruitment variance)
+and also because there is no explicit incorporation of model structural
+uncertainty (although see the decision table for alternative states of
+nature).
 
 \subsection*{Research and data needs}\label{research-and-data-needs}
 \addcontentsline{toc}{subsection}{Research and data needs}
@@ -1706,10 +1708,9 @@ Fishery removals were divided among seven area- and sector-specific
 fleets. Estimated discard mortality was added to landings and included
 in the model as fleet-specific total removals. Length compositions for
 discarded and retained fish were combined as well. Data weighting was
-done using the Francis method (Francis 2011) but the McAllister-Ianelli
-method was explored as a sensitivity. More detailed information on the
-model structure and justification is available in Gertseva and Cope
-(2017) and summarized in Table~\ref{tbl-model-config}.
+done using the Francis method (Francis 2011). More detailed information
+on the model structure and justification is available in Gertseva and
+Cope (2017) and summarized in Table~\ref{tbl-model-config}.
 
 \subsubsection{Model Changes from the Last
 Assessment}\label{sec-changes}
@@ -1748,13 +1749,13 @@ assessment (Gertseva and Cope 2017) are listed below.
     composition data greatly increased ln(\(R\)\textsubscript{0}), which
     led to an increase in the spawning output, particularly for
     1920-1980 (Figure~\ref{fig-bridge14-comp2}). This new data also
-    changed the patter of the recruitment deviations significantly from
+    changed the pattern of the recruitment deviations significantly from
     1990-2024 (Figure~\ref{fig-bridge14-comp11}). From 1990-2005
     recruitment was lower than predicted in the last assessment, then
     from 2006-2016 recruitment was higher than the past, and finally
-    recruitment dropped very low for 2017-2021. This shift to lower
-    estimated recruitment for recent years seems to have slowed the
-    recovery curve (Figure~\ref{fig-bridge14-comp2}).
+    recruitment dropped very low for 2017-2021. The lower estimated
+    recruitment for recent years has slowed the recovery curve
+    (Figure~\ref{fig-bridge14-comp2}).
   \end{itemize}
 \item
   Fleet structure:
@@ -2174,44 +2175,46 @@ indicator of abundance dynamics.
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 39.9\% of its unexploited
-level. This is above the overfished threshold of SB25\%, but below the
-management target of SB40\% of unfished spawning biomass. Both areas are
-above the overfished level of 25\%. The assessment estimates that the
-coastwide spawning output of Yelloweye Rockfish dropped below the SB40\%
-target for the first time in 1986 and below the overfished SB25\%
-threshold in 1993, as a result of intense fishing by commercial and
-recreational fleets. It continued to decline and reached 14.2\% of its
-unfished output in 2000 (Table~\ref{tbl-ts}). The same year, the stock
-was declared overfished. Since then, the spawning output has slowly
-increased due to management regulations implemented to foster stock
-rebuilding.
+level. This is above the overfished threshold of SB25\%, and slightly
+below the management target of SB40\% of unfished spawning biomass. Both
+areas are above the overfished level of 25\%. The assessment estimates
+that the coastwide spawning output of Yelloweye Rockfish dropped below
+the SB40\% target for the first time in 1986 and below the overfished
+SB25\% threshold in 1993, as a result of intense fishing by commercial
+and recreational fleets. It continued to decline and reached 14.2\% of
+its unfished output in 2000 (Table~\ref{tbl-ts}). The same year, the
+stock was declared overfished. Since then, the spawning output has
+slowly increased due to management regulations implemented to foster
+stock rebuilding.
 
 Reference points for the base model are summarized in
 Table~\ref{tbl-ref-points-es-2}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1187.12 million eggs (95\%
-confidence interval: 999.2-1267.2 million eggs). The stock is declared
-overfished if the current spawning output is estimated to be below the
-\gls{msst} of 25\% of unfished level (SB25\%). The management target for
-Yelloweye Rockfish is defined as 40\% of the unfished spawning output
-(SB40\%), which is estimated by the model to be 452 million eggs (95\%
-confidence interval: 397-507), which corresponds to an exploitation rate
-of 0.025. This harvest rate provides an equilibrium yield of 115 mt at
-SB40\% (95\% confidence interval: 101-130 mt). The model estimate of
-maximum sustainable yield (MSY) is 121 mt (95\% confidence interval:
-106-136 mt). The estimated spawning stock output at MSY is 327 million
-eggs (95\% confidence interval: 287-367 million eggs). The exploitation
-rate corresponding to the estimated SPRMSY of F36\% is 0.036.
+confidence interval: 1,045.7-1,328.5 million eggs). The stock is
+declared overfished if the current spawning output is estimated to be
+below the \gls{msst} of 25\% of unfished level (SB25\%). The management
+target for Yelloweye Rockfish is defined as 40\% of the unfished
+spawning output (SB40\%), which is estimated by the model to be 475
+million eggs (95\% confidence interval: 418-531 million eggs), which
+corresponds to an exploitation rate of 0.026. This harvest rate provides
+an equilibrium yield of 121 mt at SB40\% (95\% confidence interval:
+107-136 mt). The model estimate of maximum sustainable yield (MSY) is
+127 mt (95\% confidence interval: 112-142 mt). The estimated spawning
+stock output at MSY is 344 million eggs (95\% confidence interval:
+303-384 million eggs). The exploitation rate corresponding to the
+estimated SPRMSY of F36\% is 0.036.
 
 This assessment estimates that the 2024 SPR is 79.8\%
 (Figure~\ref{fig-time-spr}). The SPR used for setting the OFL is 50\%,
 while the SPR-based management fishing mortality target specified in the
-current rebuilding plan and used to determine the ACL is 76\%. Relative
-exploitation rates (calculated as catch/biomass of age-8 and older fish)
-are estimated to have been below 1\% during the last decade. This
-assessment estimates that Yelloweye Rockfish was fished beyond the
-relative SPR ratio (calculated as 1-SPR/1-SPRTarget=0.5) between 1977
-and 2000. The equilibrium yield curve is shown in
-Figure~\ref{fig-eq-yield}.
+current rebuilding plan and used to determine the \gls{acl} is 76\%
+(when the SPR is greater than this value, the exploitation is below the
+target). Relative exploitation rates (calculated as catch/biomass of
+age-8 and older fish) are estimated to have been below 1\% during the
+last decade. This assessment estimates that Yelloweye Rockfish was
+fished beyond the relative SPR ratio (calculated as
+1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The equilibrium yield
+curve is shown in Figure~\ref{fig-eq-yield}.
 
 \subsection{Harvest Projections and Decision
 Tables}\label{harvest-projections-and-decision-tables}
@@ -2228,14 +2231,8 @@ low state of nature was calculated to correspond to 147 years of age,
 which is the maximum age reported for the Yelloweye Rockfish; this value
 was 0.037 y-1.
 
-Twelve-year forecasts for each state of nature were calculated for two
-catch scenarios (Table~\ref{tbl-es-decision-2}). One scenario assumes
-2025-2026 catches to be 60\% of year-specific \gls{acl} values, and
-2027-2036 catches to be 60\% of removals calculated using current
-rebuilding SPR of 76\% applied to the base model. The second catch
-scenario assumes 2025-2026 removals to be equal to year-specific
-\gls{acl}s, and 2027-2036 catches calculated using current rebuilding
-SPR of 76\% applied to the base model.
+Twelve-year forecasts for each state of nature were calculated
+(Table~\ref{tbl-es-decision-2}).
 
 \subsection{Evaluation of Scientific
 Uncertainty}\label{evaluation-of-scientific-uncertainty}
